--- a/public_html/HW3/Problem1.html
+++ b/public_html/HW3/Problem1.html
@@ -60,7 +60,7 @@
     <nav>
         <ul>
             <li><a href="#" onclick='getCurrentSelection(this)'>login</a></li>
-            <li><a href="#" onclick='getCurrentSelection(this)'>legister</a></li>
+            <li><a href="#" onclick='getCurrentSelection(this)'>Register</a></li>
             <li><a href="#" onclick='getCurrentSelection(this)'>profile</a></li>
             <li><a href="#" onclick='getCurrentSelection(this)'>logout</a></li>
           </ul>
