--- a/public_html/HW3/Problem1.html
+++ b/public_html/HW3/Problem1.html
@@ -19,6 +19,13 @@
           }
         </script>
     <style>
+    
+    ul li {
+      display: inline;
+      padding: 0.3rem;
+      font-size: large;
+    }
+
     ul {
       list-style-type: none;
       background-color: rgb(232, 113, 8);
