--- a/public_html/HW3/Problem1.html
+++ b/public_html/HW3/Problem1.html
@@ -60,7 +60,7 @@
 </head>
 <!-- Do not edit anything below this line, doing so will lose points-->
 
-<body onload="check();updateCurrentPage('start');">
+<body onload="check();updateCurrentPage('Primary');">
     <header>
         <h2>Problem 1</h2>
     </header>
