--- a/public_html/html5.html
+++ b/public_html/html5.html
@@ -1,531 +1,530 @@
 <!DOCTYPE html>
 
-<html>
+ <html>
 
-<head>
+ <head>
 
-<script>
+ <script>
 
-//modified from http://jsfiddle.net/bencentra/q1s8gmqv/?utm_source=website&utm_medium=embed&utm_campaign=q1s8gmqv
+ //modified from http://jsfiddle.net/bencentra/q1s8gmqv/?utm_source=website&utm_medium=embed&utm_campaign=q1s8gmqv
 
-var canvas;
+ var canvas;
 
-var context;
+ var context;
 
-var loop;
+ var loop;
 
-var leftPaddle;
+ var leftPaddle;
 
-var rightPaddle;
+ var rightPaddle;
 
-var ball;
+ var ball;
 
-var paddleWidth = 10;// decrease paddel width
+ var paddleWidth = 10;// decrease paddel width
 
-var paddleHeight = 100;
+ var paddleHeight = 100;
 
-var ballSize = 15; // increase ball width
+ var ballSize = Math.floor(Math.random()*55); // increase ball width
 
-var ballSpeed = 2;
+ var ballSpeed = 2;
 
-var paddleSpeed = 2;
+ var paddleSpeed = 2;
 
-var drawables = [];
+ var drawables = [];
 
-// Key Codes
+ var randomColor = Math.floor(Math.random()*16777215).toString(16);
 
-var W = 87;
+ // Key Codes
 
-var S = 83;
+ var W = 87;
 
-var UP = 38;
+ var S = 83;
 
-var DOWN = 40;
+ var UP = 38;
 
+ var DOWN = 40;
 
 
-// Keep track of pressed keys
 
-var keys = {
+ // Keep track of pressed keys
 
-    W: false,
+ var keys = {
 
-    S: false,
+     W: false,
 
-    UP: false,
+     S: false,
 
-    DOWN: false
+     UP: false,
 
-};
+     DOWN: false
 
-// Keep track of the score
+ };
 
-var leftScore = 0;
+ // Keep track of the score
 
-var rightScore = 0;
+ var leftScore = 0;
 
-function init() {
+ var rightScore = 0;
 
-    canvas = document.getElementById("board");
+ function init() {
 
-    if (canvas.getContext) {
+     canvas = document.getElementById("board");
 
-        context = canvas.getContext("2d");
+     if (canvas.getContext) {
 
-        leftPaddle = makeRect(25, canvas.height / 2 - paddleHeight / 2, paddleWidth, paddleHeight, 5, '#ff9900'); // left paddle color
+         context = canvas.getContext("2d");
 
-        rightPaddle = makeRect(canvas.width - paddleWidth - 25, canvas.height / 2 - paddleHeight / 2, paddleWidth, paddleHeight, 5, '#339933'); // right paddle color
+         leftPaddle = makeRect(25, canvas.height / 2 - paddleHeight / 2, paddleWidth, paddleHeight, 5, '#ff9900'); // left paddle color
 
-        ball = makeRect(0, 0, ballSize, ballSize, ballSpeed, '#ff3300'); // change ball color
+         rightPaddle = makeRect(canvas.width - paddleWidth - 25, canvas.height / 2 - paddleHeight / 2, paddleWidth, paddleHeight, 5, '#339933'); // right paddle color
 
-        drawables.push(leftPaddle);
+         ball = makeRect(0, 0, ballSize, ballSize, ballSpeed, randomColor); // change ball color
 
-        drawables.push(rightPaddle);
+         drawables.push(leftPaddle);
 
-        drawables.push(ball);
+         drawables.push(rightPaddle);
 
-        console.log(drawables);
+         drawables.push(ball);
 
-        resetBall();
+         console.log(drawables);
 
-        attachKeyListeners();
+         resetBall();
 
-        loop = window.setInterval(gameLoop, 16); //16ms
+         attachKeyListeners();
 
-        canvas.focus();
+         loop = window.setInterval(gameLoop, 16); //16ms
 
-    }
+         canvas.focus();
 
-}
+     }
 
-function resetBall() {
+ }
 
-    ball.x = canvas.width / 2 - ball.w / 2;
+ function resetBall() {
 
-    ball.y = canvas.height / 2 - ball.w / 2;
+     ball.x = canvas.width / 2 - ball.w / 2;
 
-    // Modify the ball object to have two speed properties, one for X and one for Y
+     ball.y = canvas.height / 2 - ball.w / 2;
 
-    ball.sX = ballSpeed;
 
+     // Modify the ball object to have two speed properties, one for X and one for Y
 
+     ball.sX = ballSpeed;
 
-    ball.sY = ballSpeed / 2;
+     ball.sY = ballSpeed / 2;
 
-    // Randomize initial direction
+     // Randomize initial direction
 
-    if (Math.random() > 0.5) {
+     if (Math.random() > 0.5) {
 
-        ball.sX *= -1;
+         ball.sX *= -1;
 
-    }
+     }
 
-    // Randomize initial direction
+     // Randomize initial direction
 
-    if (Math.random() > 0.5) {
+     if (Math.random() > 0.5) {
 
-        ball.sY *= -1;
+         ball.sY *= -1;
 
-    }
+     }
 
-}
+ }
 
-// Bounce the ball off of a paddle
+ // Bounce the ball off of a paddle
 
-function bounceBall() {
+ function bounceBall() {
 
-    // Increase and reverse the X speed
+     // Increase and reverse the X speed
 
-    if (ball.sX > 0) {
+     if (ball.sX > 0) {
 
-        ball.sX += 1;
+         ball.sX += 1;
 
-        // Add some "spin"
+         // Add some "spin"
 
-        if (keys.UP) {
+         if (keys.UP) {
 
-            ball.sY -= 1;
+             ball.sY -= 1;
 
-        } else if (keys.DOWN) {
+         } else if (keys.DOWN) {
 
-            ball.sY += 1;
+             ball.sY += 1;
 
-        }
+         }
 
-    } else {
+     } else {
 
-        ball.sX -= 1;
+         ball.sX -= 1;
 
-        // Add some "spin"
+         // Add some "spin"
 
-        if (keys.W) {
+         if (keys.W) {
 
-            ball.sY -= 1;
+             ball.sY -= 1;
 
-        } else if (keys.S) {
+         } else if (keys.S) {
 
-            ball.sY += 1
+             ball.sY += 1
 
-        }
+         }
 
-    }
+     }
 
-    ball.sX *= -1;
+     ball.sX *= -1;
 
-}
+ }
 
-function attachKeyListeners() {
+ function attachKeyListeners() {
 
-    window.addEventListener('keydown', function (e) {
+     window.addEventListener('keydown', function (e) {
 
-        console.log("keydown", e);
+         console.log("keydown", e);
 
-        if (e.keyCode === W) {
+         if (e.keyCode === W) {
 
-            keys.W = true;
+             keys.W = true;
 
-        }
+         }
 
-        if (e.keyCode === S) {
+         if (e.keyCode === S) {
 
-            keys.S = true;
+             keys.S = true;
 
-        }
+         }
 
-        if (e.keyCode === UP) {
+         if (e.keyCode === UP) {
 
-            keys.UP = true;
+             keys.UP = true;
 
-        }
+         }
 
-        if (e.keyCode === DOWN) {
+         if (e.keyCode === DOWN) {
 
-            keys.DOWN = true;
+             keys.DOWN = true;
 
-        }
+         }
 
-        console.log(keys);
+         console.log(keys);
 
-    });
+     });
 
-    window.addEventListener('keyup', function (e) {
+     window.addEventListener('keyup', function (e) {
 
-        console.log("keyup", e);
+         console.log("keyup", e);
 
-        if (e.keyCode === W) {
+         if (e.keyCode === W) {
 
-            keys.W = false;
+             keys.W = false;
 
-        }
+         }
 
-        if (e.keyCode === S) {
+         if (e.keyCode === S) {
 
-            keys.S = false;
+             keys.S = false;
 
-        }
+         }
 
-        if (e.keyCode === UP) {
+         if (e.keyCode === UP) {
 
-            keys.UP = false;
+             keys.UP = false;
 
-        }
+         }
 
-        if (e.keyCode === DOWN) {
+         if (e.keyCode === DOWN) {
 
-            keys.DOWN = false;
+             keys.DOWN = false;
 
-        }
+         }
 
-        console.log(keys);
+         console.log(keys);
 
-    });
+     });
 
-}
+ }
 
-function makeRect(x, y, width, height, speed, color) {
+ function makeRect(x, y, width, height, speed, color) {
 
-    if (!color)
+     if (!color)
 
-        color = '#000000';
+         color = '#000000';
 
-    return {
+     return {
 
-        x: x,
+         x: x,
 
-        y: y,
+         y: y,
 
-        w: width,
+         w: width,
 
-        h: height,
+         h: height,
 
-        s: speed,
+         s: speed,
 
-        c: color,
+         c: color,
 
-        draw: function () {
+         draw: function () {
 
-            context.fillStyle = this.c;
+             context.fillStyle = this.c;
 
-            context.fillRect(this.x, this.y, this.w, this.h);
+             context.fillRect(this.x, this.y, this.w, this.h);
 
-        }
+         }
 
-    };
+     };
 
-}
+ }
 
-function doAI() {
+ function doAI() {
 
-    if (ball.x >= canvas.width * .6) {
+     if (ball.x >= canvas.width * .6) {
 
-        let paddleHalf = paddleHeight / 2;
+         let paddleHalf = paddleHeight / 2;
 
-        if (ball.y > rightPaddle.y + paddleHalf) {
+         if (ball.y > rightPaddle.y + paddleHalf) {
 
-            rightPaddle.y += rightPaddle.s;
+             rightPaddle.y += rightPaddle.s;
 
-        } else if (ball.y < rightPaddle.y) {
+         } else if (ball.y < rightPaddle.y) {
 
-            rightPaddle.y -= rightPaddle.s;
+             rightPaddle.y -= rightPaddle.s;
 
-        }
+         }
 
-    }
+     }
 
-    clampToCanvas(rightPaddle);
+     clampToCanvas(rightPaddle);
 
-}
+ }
 
-function movePaddle() {
+ function movePaddle() {
 
-    if (keys.W) {
+     if (keys.W) {
 
-        leftPaddle.y -= leftPaddle.s;
+         leftPaddle.y -= leftPaddle.s;
 
-    }
+     }
 
-    if (keys.S) {
+     if (keys.S) {
 
-        leftPaddle.y += leftPaddle.s;
+         leftPaddle.y += leftPaddle.s;
 
-    }
+     }
 
-    if (keys.UP) {
+     if (keys.UP) {
 
-        leftPaddle.y -= leftPaddle.s;
+         leftPaddle.y -= leftPaddle.s;
 
-    }
+     }
 
-    if (keys.DOWN) {
+     if (keys.DOWN) {
 
-        leftPaddle.y += leftPaddle.s;
+         leftPaddle.y += leftPaddle.s;
 
-    }
+     }
 
-    clampToCanvas(leftPaddle);
+     clampToCanvas(leftPaddle);
 
-}
+ }
 
-function clampToCanvas(paddle) {
+ function clampToCanvas(paddle) {
 
-    if (paddle.y < 0) {
+     if (paddle.y < 0) {
 
-        paddle.y = 0;
+         paddle.y = 0;
 
-    }
+     }
 
-    if (paddle.y + paddle.h > canvas.height) {
+     if (paddle.y + paddle.h > canvas.height) {
 
-        paddle.y = canvas.height - paddle.h;
+         paddle.y = canvas.height - paddle.h;
 
-    }
+     }
 
-}
+ }
 
-function moveBall() {
+ function moveBall() {
 
-    // Move the ball
+     // Move the ball
 
-    ball.x += ball.sX;
+     ball.x += ball.sX;
 
-    ball.y += ball.sY;
+     ball.y += ball.sY;
 
-    // Bounce the ball off the top/bottom
+     // Bounce the ball off the top/bottom
 
-    if (ball.y < 0 || ball.y + ball.h > canvas.height) {
+     if (ball.y < 0 || ball.y + ball.h > canvas.height) {
 
-        ball.sY *= -1;
+         ball.sY *= -1;
 
-    }
+     }
 
-}
+ }
 
-function checkPaddleCollision() {
+ function checkPaddleCollision() {
 
-    // Bounce the ball off the paddles
+     // Bounce the ball off the paddles
 
-    if (ball.y + ball.h / 2 >= leftPaddle.y && ball.y + ball.h / 2 <= leftPaddle.y + leftPaddle.h) {
+     if (ball.y + ball.h / 2 >= leftPaddle.y && ball.y + ball.h / 2 <= leftPaddle.y + leftPaddle.h) {
 
-        if (ball.x <= leftPaddle.x + leftPaddle.w) {
+         if (ball.x <= leftPaddle.x + leftPaddle.w) {
 
-            bounceBall();
+             bounceBall();
 
-        }
+         }
 
-    }
+     }
 
-    if (ball.y + ball.h / 2 >= rightPaddle.y && ball.y + ball.h / 2 <= rightPaddle.y + rightPaddle.h) {
+     if (ball.y + ball.h / 2 >= rightPaddle.y && ball.y + ball.h / 2 <= rightPaddle.y + rightPaddle.h) {
 
-        if (ball.x + ball.w >= rightPaddle.x) {
+         if (ball.x + ball.w >= rightPaddle.x) {
 
-            bounceBall();
+             bounceBall();
 
-        }
+         }
 
-    }
+     }
 
-}
+ }
 
-function checkScore() {
+ function checkScore() {
 
-    // Score if the ball goes past a paddle
+     // Score if the ball goes past a paddle
 
-    if (ball.x < leftPaddle.x) {
+     if (ball.x < leftPaddle.x) {
 
-        rightScore++;
+         rightScore++;
 
-        resetBall();
+         resetBall();
 
-        ball.sX *= -1;
+         ball.sX *= -1;
 
-    } else if (ball.x + ball.w > rightPaddle.x + rightPaddle.w) {
+     } else if (ball.x + ball.w > rightPaddle.x + rightPaddle.w) {
 
-        leftScore++;
+         leftScore++;
 
-        resetBall();
+         resetBall();
 
-        ball.sX *= -1;
+         ball.sX *= -1;
 
-    }
+     }
 
-}
+ }
 
-function endGame() {
+ function endGame() {
 
-    erase();
+     erase();
 
-  context.fillStyle = '#000000';
+   context.fillStyle = '#000000';
 
-  context.font = '24px Arial';
+   context.font = '24px Arial';
 
-  context.textAlign = 'center';
+   context.textAlign = 'center';
 
-  var winner = 1;
+   var winner = 1;
 
-  if (rightScore === 5) winner = 2;
+   if (rightScore === 5) winner = 2;
 
-  context.fillText('Player ' + winner + ' wins!', canvas.width/2, canvas.height/2);
+   context.fillText('Player ' + winner + ' wins!', canvas.width/2, canvas.height/2);
 
-  ResetGlobalVariables();
+   ResetGlobalVariables();
 
-}
+ }
 
-function ResetGlobalVariables(){
+ function ResetGlobalVariables(){
 
 
 
-setTimeout(function(){ leftScore = 0;
+ setTimeout(function(){ leftScore = 0;
 
-rightScore = 0; }, 3000);
+ rightScore = 0; }, 3000);
 
-exit;
+ exit;
 
-}
+ }
 
-function drawScores() {
+ function drawScores() {
 
-    // Draw the scores
+     // Draw the scores
 
-    context.fillStyle = '#ff9900'; // left paddle color
+     context.fillStyle = '#ff9900'; // left paddle color
 
-    context.font = '20px Arial';
+     context.font = '20px Arial';
 
-    context.textAlign = 'left';
+     context.textAlign = 'left';
 
-    context.fillText('Score: ' + leftScore, 5, 24);
+     context.fillText('Score: ' + leftScore, 5, 24);
 
-    context.fillStyle = '#339933'; // right paddle color
+     context.fillStyle = '#339933'; // right paddle color
 
-    context.textAlign = 'right';
+     context.textAlign = 'right';
 
-    context.fillText('Score: ' + rightScore, canvas.width - 5, 24);
+     context.fillText('Score: ' + rightScore, canvas.width - 5, 24);
 
-  if (leftScore === 5 || rightScore === 5) {
+   if (leftScore === 5 || rightScore === 5) {
 
-    endGame();
+     endGame();
 
-  } 
+   } 
 
-}
+ }
 
-function erase() {
+ function erase() {
 
-    context.fillStyle = '#FFFACD';
+     context.fillStyle = '#FFFACD';
 
-    context.fillRect(0, 0, canvas.width, canvas.height);
+     context.fillRect(0, 0, canvas.width, canvas.height);
 
-    
+ }
 
-}
+ function gameLoop() {
 
-function gameLoop() {
+     erase();
 
-    erase();
+     movePaddle();
 
-    movePaddle();
+     doAI();
 
-    doAI();
+     moveBall();
 
-    moveBall();
+     checkPaddleCollision();
 
-    checkPaddleCollision();
+     checkScore();
 
-    checkScore();
+     drawScores();
 
-    drawScores();
+     for (let i = 0; i < drawables.length; i++) {
 
-    for (let i = 0; i < drawables.length; i++) {
+         drawables[i].draw();
 
-        drawables[i].draw();
+     }
 
-    }
+ }
 
-}
+ </script>
 
-</script>
+ </head>
 
-</head>
 
 
+ <body onload="init();">
 
-<body onload="init();">
+ <center>
 
-<center>
+     <a href="http://bencentra.com/2017-07-11-basic-html5-canvas-games.html">Collection of Canvas based games by Ben Centra</a>
 
-    <a href="http://bencentra.com/2017-07-11-basic-html5-canvas-games.html">Collection of Canvas based games by Ben Centra</a>
+     <main>
 
-    <main>
+         <canvas id="board" width="600px" height="750px" style="border: 1px solid black;">
 
-        <canvas id="board" width="600px" height="750px" style="border: 1px solid black;">
 
-        
 
-        </canvas>
+         </canvas>
 
-       </center>
+        </center>
 
-    </main>
+     </main>
 
-</body>
+ </body>
 
-</html>
+ </html> 
